--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "zod": "^3.23.8",
+    "zod-formik-adapter": "^1.3.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": "eslint --fix"
