--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-  "name": "modsen-art-museum",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint src --max-warnings 0",
-    "lint:fix": "eslint src --fix --max-warnings 0",
-    "format": "prettier --write .",
-    "preview": "vite preview",
-    "prepare": "husky install"
-  },
-  "dependencies": {
-    "formik": "^2.4.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1",
-    "zod": "^3.23.8",
-    "zod-formik-adapter": "^1.3.0"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": "eslint --fix"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.8.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "globals": "^15.8.0",
-    "husky": "^9.1.4",
-    "lint-staged": "^15.2.7",
-    "prettier": "^3.3.3",
-    "sass": "^1.77.8",
-    "typescript": "^5.2.2",
-    "typescript-eslint": "^7.18.0",
-    "vite": "^5.3.4"
-  }
+	"name": "modsen-art-museum",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "eslint . --fix --max-warnings=0",
+		"format": "prettier . --write",
+		"preview": "vite preview",
+		"prepare": "husky install"
+	},
+	"dependencies": {
+		"formik": "^2.4.6",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-router-dom": "^6.25.1",
+		"zod": "^3.23.8",
+		"zod-formik-adapter": "^1.3.0"
+	},
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx}": "npm run lint",
+		"*.{js,jsx,ts,tsx,css,scss,md,html,json}": "npm run format",
+		"*.js": "eslint --cache --fix"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.8.0",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"@typescript-eslint/eslint-plugin": "^7.15.0",
+		"@typescript-eslint/parser": "^7.15.0",
+		"@vitejs/plugin-react": "^4.3.1",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-plugin-react": "^7.35.0",
+		"eslint-plugin-react-hooks": "^4.6.2",
+		"eslint-plugin-react-refresh": "^0.4.7",
+		"globals": "^15.8.0",
+		"husky": "^9.1.4",
+		"lint-staged": "^15.2.7",
+		"prettier": "^3.3.3",
+		"sass": "^1.77.8",
+		"typescript": "^5.2.2",
+		"typescript-eslint": "^7.18.0",
+		"vite": "^5.3.4"
+	}
 }
