--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,18 @@
 		"strict": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"noFallthroughCasesInSwitch": true
+		"noFallthroughCasesInSwitch": true,
+
+		/* Aliases */
+		"baseUrl": "src",
+		"paths": {
+			"components/*": ["components/*"],
+			"utils/*": ["utils/*"],
+			"assets/*": ["assets/*"],
+			"pages/*": ["pages/*"],
+			"context/*": ["context/*"],
+			"constants/*": ["constants/*"]
+		}
 	},
 	"include": ["src"]
 }
