--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"lint": "eslint . --fix --max-warnings=0",
 		"format": "prettier . --write",
 		"preview": "vite preview",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"test": "jest"
 	},
 	"dependencies": {
 		"formik": "^2.4.6",
@@ -25,12 +26,20 @@
 		"*.js": "eslint --cache --fix"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.25.3",
+		"@babel/preset-react": "^7.24.7",
+		"@babel/preset-typescript": "^7.24.7",
 		"@eslint/js": "^9.8.0",
-		"@types/react": "^18.3.3",
+		"@testing-library/jest-dom": "^6.4.8",
+		"@testing-library/react": "^14.0.0",
+		"@testing-library/user-event": "^14.5.2",
+		"@types/jest": "^29.5.12",
+		"@types/react": "^18.3.0",
 		"@types/react-dom": "^18.3.0",
 		"@typescript-eslint/eslint-plugin": "^7.15.0",
 		"@typescript-eslint/parser": "^7.15.0",
 		"@vitejs/plugin-react": "^4.3.1",
+		"babel-jest": "^29.7.0",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
@@ -39,9 +48,15 @@
 		"eslint-plugin-react-refresh": "^0.4.7",
 		"globals": "^15.8.0",
 		"husky": "^9.1.4",
+		"identity-obj-proxy": "^3.0.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"jest-fetch-mock": "^3.0.3",
 		"lint-staged": "^15.2.7",
 		"prettier": "^3.3.3",
 		"sass": "^1.77.8",
+		"ts-jest": "^29.2.4",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.2.2",
 		"typescript-eslint": "^7.18.0",
 		"vite": "^5.3.4"
